Import of ZOFFIX/Spreadsheet-DataToExcel-0.0103 from CPAN.
gitpan-cpan-distribution: Spreadsheet-DataToExcel
gitpan-cpan-version:      0.0103
gitpan-cpan-path:         ZOFFIX/Spreadsheet-DataToExcel-0.0103.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,24 @@
 ---
-name: Spreadsheet-DataToExcel
-version: 0.0102
+abstract: 'Simple method to generate Excel files from 2D arrayrefs'
 author:
   - "'Zoffix <'zoffix@cpan.org'>"
-abstract: Simple method to generate Excel files from 2D arrayrefs
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  Class::Data::Accessor: 0.04004
-  Spreadsheet::WriteExcel: 2.25
 build_requires:
   Test::More: 0
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3607'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Spreadsheet-DataToExcel
 provides:
   Spreadsheet::DataToExcel:
     file: lib/Spreadsheet/DataToExcel.pm
-    version: 0.0102
-generated_by: Module::Build version 0.280801
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+    version: 0.0103
+requires:
+  Class::Data::Accessor: 0.04004
+  Spreadsheet::WriteExcel: 2.25
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.0103
